Prevent quotes overflowing on mobile

--- a/src/styles/components/blockquotes.scss
+++ b/src/styles/components/blockquotes.scss
@@ -3,8 +3,8 @@
 
 blockquote {
     border-left: 1rem solid #ccc;
-    margin: 6rem -3rem;
-    padding: 1rem 3rem;
+    margin: 6rem 0;
+    padding: 1rem 3rem 2rem;
     position: relative;
     quotes: '“' '”' '‘' '’';
     text-align: justify;
